--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYРE html>
 <head><title="reglasdelclanMF"> </title>
 	<style>
-body{background:#888888;width:90%;height:100%;font-size:12pt;font-family:Helvetica,Verdana,Arial,sans-serif;background: url(http://i.imgur.com/sJnu5aO.png) 0% 50%/ cover no-repeat fixed rgb(84, 107, 172);
+body{background:#888888;width:90%;height:100%;font-size:12pt;font-family:Helvetica,Verdana,Arial,sans-serif;background: url(http://orig02.deviantart.net/e8ed/f/2013/188/9/e/arceus_banner_by_shinyeeveee-d6cebca.png) 0% 50%/ cover no-repeat fixed rgb(84, 107, 172);
 				color: black;
 			}.rules{background:background-color: rgb(136, 138, 125, 0.4);width:600px;margin-left:auto;margin-right:auto;border-radius:54px;border:4px solid #BDBDBD;}.rules a{color:#0B3B0B;text-decoration:strong;}.intro{width:450px;margin-left:auto;margin-right:auto;text-align:justify;line-height:24px;}li{width:500px;padding-top:6px;padding-bottom:6px;margin-left:auto;margin-right:auto;text-indent:48px;text-align:justify;line-height:24px;color:white;}h1,h2{text-align:center;font-style:italic;color:#58ACFA}
       </style>
@@ -16,11 +16,12 @@ body{background:#888888;width:90%;height:100%;font-size:12pt;font-family:Helveti
 <li>En caso de tener alguna queja de algun miembro del clan hablar con un lider o sublider.</li>
 	<li>No es permitido el abuso de poder, los kicks son considerado abuso si se usa sin razón.  </li></ol>
 	<h2>Principales objetivos</h2>
-<ol><li>Divertirnos y crecer juntos sin importar los resultados.
-<li>Ayudar a los miembros nuevos en el ámbito competitivo.
+<ol><li>Divertirnos y crecer juntos sin importar lo que cueste.
+<li>Ayudar a los miembros nuevos en el competitivo.
 <li>Evitar la problemática de flamers y demás cosas que contribuyan a un ban hacía algún miembro o una sanción del clan.
 <li>Llevarnos bien internamente en el clan y externamente con los demás clanes.
-	<li>Poder llegar a ser top en el ranking a largo plazo.</ol>
+	<li>Poder llegar a ser top en el ranking a largo plazo.
+	<li>Destacar entre los clanes poco a poco con la ayuda de nuestros miembros.</ol>
 	
 	</div>
 </body>
