--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYРE html>
 <head><title="reglasdelclanMF"> </title>
 	<style>
-body{background:#888888;width:90%;height:100%;font-size:12pt;font-family:Helvetica,Verdana,Arial,sans-serif;background: url(http://orig02.deviantart.net/e8ed/f/2013/188/9/e/arceus_banner_by_shinyeeveee-d6cebca.png) 0% 50%/ cover no-repeat fixed rgb(84, 107, 172);
+		body{background:#888888;width:90%;height:100%;font-size:12pt;font-family:Helvetica,Verdana,Arial,sans-serif;background:url(//play.pandorashowdown.net/fx/client-bg-darkmatter.png) 0% 50%/ cover no-repeat fixed rgb(84, 107, 172);
 				color: black;
-			}.rules{background:background-color: rgba(250, 250, 250, 0.77);width:600px;margin-left:auto;margin-right:auto;border-radius:54px;border:4px solid #BDBDBD;}.rules a{color:#0B3B0B;text-decoration:strong;}.intro{width:450px;margin-left:auto;margin-right:auto;text-align:justify;line-height:24px;}li{width:500px;padding-top:6px;padding-bottom:6px;margin-left:auto;margin-right:auto;text-indent:48px;text-align:justify;line-height:24px;color:white;}h1,h2{text-align:center;font-style:italic;color:#58ACFA}
-      </style>
+			}.rules{background:rgba(250,250,250,0.85);width:640px;margin-left:auto;margin-right:auto;border-radius:24px;border:6px solid #000;}.rules a{color:#0B3B0B;text-decoration:strong;}.intro{width:450px;margin-left:auto;margin-right:auto;text-align:justify;line-height:24px;}li{width:500px;padding-top:6px;padding-bottom:6px;margin-left:auto;margin-right:auto;text-indent:48px;text-align:justify;line-height:24px;}h1,h2{text-align:center;font-style:italic;}
+	</style>
 </head>
 
 <body>
