--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="rules"><center><p><h1>Reglas del Clan God Slayers</h1></p></center>
 <ol><li>Ante todo el respeto entre usuarios, el usuario que inrespete a otro user o miembro del staff del servidor en la sala o al staff de la sala sera sancionado.</li>
 <li>No es permitido pedir rango en la sala, los miembros del clan tendran rango o los users que el staff crean convenientes para mantener la paz.</li>
-<li>Los comentario, imagenes o algún hipervinculo que este relacionado con material sexual explicito, screamers o que causen algun shock seran sancionados seberamente.</li>
+<li>Los comentario, imagenes o algún hipervinculo que este relacionado con material sexual explicito, screamers o que causen algun shock seran sancionados severamente.</li>
 <li>No es permitido el uso de <b>negritas</b> e/o <em>italicas</em> en exceso.</li>
 <li>En caso de tener alguna queja de algun miembro del clan hablar con un lider o sublider.</li>
 	<li>No es permitido el abuso de poder, los kicks son considerado abuso si se usa sin razón.  </li></ol>
