--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<li>Destacar entre los clanes poco a poco con la ayuda de nuestros miembros.</ol>
 	
 
-	<h3><details style="vertical-align: top ; line-height: 1.75 ; margin: auto"><summary style="cursor: pointer ; color: #ea7720"><em style="color: #ea7720"><strong>Creditos del clan:</strong></em></summary></h3>
+	<h3Creditos del Clan</h3>
 		<li> Creación del clan: Z Strike, 3M3 y Kyundai.</li>
 		<li >Lideres del clan: Z Strike, 3M3 y Kyundai.</li>
 		<li> Creación de Reglas: nixon7777</li>
