--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<li>Destacar entre los clanes poco a poco con la ayuda de nuestros miembros.</ol>
 	
 
-	<h3Creditos del Clan</h3>
+	<h2>Creditos del Clan</h2>
 		<li> Creación del clan: Z Strike, 3M3 y Kyundai.</li>
 		<li >Lideres del clan: Z Strike, 3M3 y Kyundai.</li>
 		<li> Creación de Reglas: nixon7777</li>
